--- a/index.html
+++ b/index.html
@@ -1165,8 +1165,9 @@
       telegramWorkerUrl: "https://segnalafacile-telegram.vocidicassino.workers.dev",
       telegramApiKey: "Marco-Admin-2026",
 
-      // affidabilità: inviamo SOLO la prima foto al Worker (le altre restano in locale)
-      sendOnlyFirstPhotoToServer: true
+      // invio foto: FALSE = invia TUTTE le foto selezionate (fino a 10) al Worker/Telegram
+      // (puoi rimetterlo a true se vuoi inviare solo la prima foto per risparmiare banda)
+      sendOnlyFirstPhotoToServer: false
     };
 
     // =========================
