--- a/index.html
+++ b/index.html
@@ -1203,7 +1203,7 @@
       telegramApiKey: "Marco-Admin-2026",
 
       // affidabilità: inviamo SOLO la prima foto al Worker (le altre restano in locale)
-      sendOnlyFirstPhotoToServer: true
+      sendOnlyFirstPhotoToServer: false
     };
 
     // =========================
